# SpotifyBotCMake

./: .gitignore  CMakeLists.txt
SpotifyBot/: SpotifyAPIHandler.cpp  SpotifyAPIHandler.h  config.cpp  config.h  jsonHandler.cpp  jsonHandler.h  main.cpp  server.cpp  server.h
